[DUOS-1472][risk=no] Minor test refactoring (#1299)
* test cleanup